--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "dev:server": "npx json-server server.json -p 3333 -w 500",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
+    "lint": "npx eslint . --fix",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -31,13 +31,14 @@
     "@types/styled-components": "^5.1.34",
     "@typescript-eslint/eslint-plugin": "^8.8.1",
     "@typescript-eslint/parser": "^8.8.1",
+    "@typescript-eslint/typescript-estree": "^8.14.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^9.11.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
     "json-server": "^1.0.0-beta.3",
-    "typescript": "^5.5.3",
+    "typescript": "^5.6.3",
     "typescript-eslint": "^8.7.0",
     "vite": "^5.4.8"
   }
